Changing the files as discussed

--- a/create_stack.html
+++ b/create_stack.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
     </div>
-    <input type="button" value="Add Item">
+    <input type="button" id="addStack" value="Add Item">
     <script type="text/javascript" src="create_stack.js">
     </script>
   </body>
