--- a/create_stack.html
+++ b/create_stack.html
@@ -4,14 +4,14 @@
     <title>
       Create Stack
     </title>
-    <link rel="stylesheet" type="text/css" href="create_stack.css">
-    <script type="text/javascript" src="jquery-2.1.1.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/create_stack.css">
+    <script type="text/javascript" src="lib/jquery-2.1.1.js"></script>
   </head>
   <body>
     <div class="container">
     </div>
     <input type="button" id="addStack" value="Add Item">
-    <script type="text/javascript" src="create_stack.js">
+    <script type="text/javascript" src="js/create_stack.js">
     </script>
   </body>
 </html>      
